@@ -34,7 +34,6 @@
 		damage=8
 		number=3
 		[animation]
-			hits=no
 			[frame]
 				begin=-250
 				end=-200
@@ -45,41 +44,24 @@
 				end=-125
 				image="units/human-loyalists/masterbowman-melee-1.png"
 			[/frame]
-			[frame]
-				begin=-125
-				end=75
-				image="units/human-loyalists/masterbowman-melee-2.png"
-				sound={SOUND_LIST:MISS}
-			[/frame]
-			[frame]
-				begin=75
-				end=125
-				image="units/human-loyalists/masterbowman-melee-1.png"
-			[/frame]
-			[frame]
-				begin=125
-				end=175
-				image="units/human-loyalists/masterbowman.png"
-			[/frame]
-		[/animation]
-		[animation]
-			hits=yes
-			[frame]
-				begin=-250
-				end=-200
-				image="units/human-loyalists/masterbowman.png"
-			[/frame]
-			[frame]
-				begin=-200
-				end=-125
-				image="units/human-loyalists/masterbowman-melee-1.png"
-			[/frame]
-			[frame]
-				begin=-125
-				end=75
-				image="units/human-loyalists/masterbowman-melee-2.png"
-				sound={SOUND_LIST:SWORD_SWISH}
-			[/frame]
+			[if]
+				hits=no
+				[frame]
+					begin=-125
+					end=75
+					image="units/human-loyalists/masterbowman-melee-2.png"
+					sound={SOUND_LIST:MISS}
+				[/frame]
+			[/if]
+			[else]
+				hits=yes
+				[frame]
+					begin=-125
+					end=75
+					image="units/human-loyalists/masterbowman-melee-2.png"
+					sound={SOUND_LIST:SWORD_SWISH}
+				[/frame]
+			[/else]
 			[frame]
 				begin=75
 				end=125
@@ -99,7 +81,6 @@
 		damage=11
 		number=4
 		[animation]
-			hits=no
 			[missile_frame]
 				begin=-100
 				end=0
@@ -116,47 +97,24 @@
 				end=-400
 				image="units/human-loyalists/masterbowman-attack-ranged2.png"
 			[/frame]
-			[frame]
-				begin=-400
-				end=-300
-				image="units/human-loyalists/masterbowman-attack-ranged3.png"
-				sound=bow-miss.ogg
-			[/frame]
-			[frame]
-				begin=-300
-				end=-50
-				image="units/human-loyalists/masterbowman-attack-ranged4.png"
-			[/frame]
-			[frame]
-				begin=-50
-				end=50
-				image="units/human-loyalists/masterbowman-attack-ranged1.png"
-			[/frame]
-		[/animation]
-		[animation]
-			hits=yes
-			[missile_frame]
-				begin=-100
-				end=0
-				image="projectiles/missile-n.png"
-				image_diagonal="projectiles/missile-ne.png"
-			[/missile_frame]
-			[frame]
-				begin=-500
-				end=-450
-				image="units/human-loyalists/masterbowman-attack-ranged1.png"
-			[/frame]
-			[frame]
-				begin=-450
-				end=-400
-				image="units/human-loyalists/masterbowman-attack-ranged2.png"
-			[/frame]
-			[frame]
-				begin=-400
-				end=-300
-				image="units/human-loyalists/masterbowman-attack-ranged3.png"
-				sound=bow.ogg
-			[/frame]
+			[if]
+				hits=no
+				[frame]
+					begin=-400
+					end=-300
+					image="units/human-loyalists/masterbowman-attack-ranged3.png"
+					sound=bow-miss.ogg
+				[/frame]
+			[/if]
+			[else]
+				hits=yes
+				[frame]
+					begin=-400
+					end=-300
+					image="units/human-loyalists/masterbowman-attack-ranged3.png"
+					sound=bow.ogg
+				[/frame]
+			[/else]
 			[frame]
 				begin=-300
 				end=-50
