@@ -103,6 +103,7 @@ SVN trunk (1.1.2+svn):
    * new /help command in mp lobby to get info on available commands
    * :mute command to silent observers
    * new --turns= commandline parameter
+   * conditional statements in animation syntax
 
 Version 1.1.2:
  * campaigns
